netmap rebuild tests added